src/grammar/runtime/XenonParser.cpp

// Generated from XenonParser.g4 by ANTLR 4.8


#include "XenonParserVisitor.h"

#include "XenonParser.h"


using namespace antlrcpp;
using namespace antlr4;

XenonParser::XenonParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

XenonParser::~XenonParser() {
  delete _interpreter;
}

std::string XenonParser::getGrammarFileName() const {
  return "XenonParser.g4";
}

const std::vector<std::string>& XenonParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& XenonParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- InstructionsContext ------------------------------------------------------------------

XenonParser::InstructionsContext::InstructionsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

XenonParser::EosContext* XenonParser::InstructionsContext::eos() {
  return getRuleContext<XenonParser::EosContext>(0);
}

std::vector<XenonParser::StatementContext *> XenonParser::InstructionsContext::statement() {
  return getRuleContexts<XenonParser::StatementContext>();
}

XenonParser::StatementContext* XenonParser::InstructionsContext::statement(size_t i) {
  return getRuleContext<XenonParser::StatementContext>(i);
}


size_t XenonParser::InstructionsContext::getRuleIndex() const {
  return XenonParser::RuleInstructions;
}


antlrcpp::Any XenonParser::InstructionsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XenonParserVisitor*>(visitor))
    return parserVisitor->visitInstructions(this);
  else
    return visitor->visitChildren(this);
}

XenonParser::InstructionsContext* XenonParser::instructions() {
  InstructionsContext *_localctx = _tracker.createInstance<InstructionsContext>(_ctx, getState());
  enterRule(_localctx, 0, XenonParser::RuleInstructions);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(155);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << XenonParser::Add)
      | (1ULL << XenonParser::Sub)
      | (1ULL << XenonParser::Mul)
      | (1ULL << XenonParser::Not)
      | (1ULL << XenonParser::Neg)
      | (1ULL << XenonParser::BitwiseAnd)
      | (1ULL << XenonParser::OpeningParen)
      | (1ULL << XenonParser::OpeningBrace)
      | (1ULL << XenonParser::SizeOf)
      | (1ULL << XenonParser::Class)
      | (1ULL << XenonParser::Special)
      | (1ULL << XenonParser::Union)
      | (1ULL << XenonParser::Enum)
      | (1ULL << XenonParser::Namespace)
      | (1ULL << XenonParser::VariableDeclarator)
      | (1ULL << XenonParser::If)
      | (1ULL << XenonParser::While)
      | (1ULL << XenonParser::Break)
      | (1ULL << XenonParser::For)
      | (1ULL << XenonParser::Function)
      | (1ULL << XenonParser::Extern)
      | (1ULL << XenonParser::Return)
      | (1ULL << XenonParser::Alias))) != 0) || ((((_la - 64) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 64)) & ((1ULL << (XenonParser::Attribute - 64))
      | (1ULL << (XenonParser::Assembly - 64))
      | (1ULL << (XenonParser::Import - 64))
      | (1ULL << (XenonParser::True - 64))
      | (1ULL << (XenonParser::False - 64))
      | (1ULL << (XenonParser::NullLiteral - 64))
      | (1ULL << (XenonParser::VariableName - 64))
      | (1ULL << (XenonParser::StringLiteral - 64))
      | (1ULL << (XenonParser::CharLiteral - 64))
      | (1ULL << (XenonParser::DecimalLiteral - 64))
      | (1ULL << (XenonParser::FloatingLiteral - 64))
      | (1ULL << (XenonParser::ZeroLiteral - 64))
      | (1ULL << (XenonParser::HexadecimalLiteral - 64))
      | (1ULL << (XenonParser::BinaryLiteral - 64)))) != 0)) {
      setState(152);
      statement();
      setState(157);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(158);
    eos();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BodyContext ------------------------------------------------------------------

XenonParser::BodyContext::BodyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* XenonParser::BodyContext::OpeningBrace() {
  return getToken(XenonParser::OpeningBrace, 0);
}

tree::TerminalNode* XenonParser::BodyContext::ClosingBrace() {
  return getToken(XenonParser::ClosingBrace, 0);
}

std::vector<XenonParser::StatementContext *> XenonParser::BodyContext::statement() {
  return getRuleContexts<XenonParser::StatementContext>();
}

XenonParser::StatementContext* XenonParser::BodyContext::statement(size_t i) {
  return getRuleContext<XenonParser::StatementContext>(i);
}


size_t XenonParser::BodyContext::getRuleIndex() const {
  return XenonParser::RuleBody;
}


antlrcpp::Any XenonParser::BodyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XenonParserVisitor*>(visitor))
    return parserVisitor->visitBody(this);
  else
    return visitor->visitChildren(this);
}

XenonParser::BodyContext* XenonParser::body() {
  BodyContext *_localctx = _tracker.createInstance<BodyContext>(_ctx, getState());
  enterRule(_localctx, 2, XenonParser::RuleBody);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(160);
    match(XenonParser::OpeningBrace);
    setState(164);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << XenonParser::Add)
      | (1ULL << XenonParser::Sub)
      | (1ULL << XenonParser::Mul)
      | (1ULL << XenonParser::Not)
      | (1ULL << XenonParser::Neg)
      | (1ULL << XenonParser::BitwiseAnd)
      | (1ULL << XenonParser::OpeningParen)
      | (1ULL << XenonParser::OpeningBrace)
      | (1ULL << XenonParser::SizeOf)
      | (1ULL << XenonParser::Class)
      | (1ULL << XenonParser::Special)
      | (1ULL << XenonParser::Union)
      | (1ULL << XenonParser::Enum)
      | (1ULL << XenonParser::Namespace)
      | (1ULL << XenonParser::VariableDeclarator)
      | (1ULL << XenonParser::If)
      | (1ULL << XenonParser::While)
      | (1ULL << XenonParser::Break)
      | (1ULL << XenonParser::For)
      | (1ULL << XenonParser::Function)
      | (1ULL << XenonParser::Extern)
      | (1ULL << XenonParser::Return)
      | (1ULL << XenonParser::Alias))) != 0) || ((((_la - 64) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 64)) & ((1ULL << (XenonParser::Attribute - 64))
      | (1ULL << (XenonParser::Assembly - 64))
      | (1ULL << (XenonParser::Import - 64))
      | (1ULL << (XenonParser::True - 64))
      | (1ULL << (XenonParser::False - 64))
      | (1ULL << (XenonParser::NullLiteral - 64))
      | (1ULL << (XenonParser::VariableName - 64))
      | (1ULL << (XenonParser::StringLiteral - 64))
      | (1ULL << (XenonParser::CharLiteral - 64))
      | (1ULL << (XenonParser::DecimalLiteral - 64))
      | (1ULL << (XenonParser::FloatingLiteral - 64))
      | (1ULL << (XenonParser::ZeroLiteral - 64))
      | (1ULL << (XenonParser::HexadecimalLiteral - 64))
      | (1ULL << (XenonParser::BinaryLiteral - 64)))) != 0)) {
      setState(161);
      statement();
      setState(166);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(167);
    match(XenonParser::ClosingBrace);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

XenonParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

XenonParser::FunctionContext* XenonParser::StatementContext::function() {
  return getRuleContext<XenonParser::FunctionContext>(0);
}

XenonParser::NamespaceStatementContext* XenonParser::StatementContext::namespaceStatement() {
  return getRuleContext<XenonParser::NamespaceStatementContext>(0);
}

XenonParser::ExpressionContext* XenonParser::StatementContext::expression() {
  return getRuleContext<XenonParser::ExpressionContext>(0);
}

tree::TerminalNode* XenonParser::StatementContext::InstructionsSeparator() {
  return getToken(XenonParser::InstructionsSeparator, 0);
}

XenonParser::BodyContext* XenonParser::StatementContext::body() {
  return getRuleContext<XenonParser::BodyContext>(0);
}

XenonParser::VariableDeclarationContext* XenonParser::StatementContext::variableDeclaration() {
  return getRuleContext<XenonParser::VariableDeclarationContext>(0);
}

XenonParser::ReturnStatementContext* XenonParser::StatementContext::returnStatement() {
  return getRuleContext<XenonParser::ReturnStatementContext>(0);
}

XenonParser::IfStatementContext* XenonParser::StatementContext::ifStatement() {
  return getRuleContext<XenonParser::IfStatementContext>(0);
}

XenonParser::WhileStatementContext* XenonParser::StatementContext::whileStatement() {
  return getRuleContext<XenonParser::WhileStatementContext>(0);
}

XenonParser::ForStatementContext* XenonParser::StatementContext::forStatement() {
  return getRuleContext<XenonParser::ForStatementContext>(0);
}

XenonParser::BreakStatementContext* XenonParser::StatementContext::breakStatement() {
  return getRuleContext<XenonParser::BreakStatementContext>(0);
}

XenonParser::SpecialClassStatementContext* XenonParser::StatementContext::specialClassStatement() {
  return getRuleContext<XenonParser::SpecialClassStatementContext>(0);
}

XenonParser::ClassStatementContext* XenonParser::StatementContext::classStatement() {
  return getRuleContext<XenonParser::ClassStatementContext>(0);
}

XenonParser::UnionStatementContext* XenonParser::StatementContext::unionStatement() {
  return getRuleContext<XenonParser::UnionStatementContext>(0);
}

XenonParser::EnumStatementContext* XenonParser::StatementContext::enumStatement() {
  return getRuleContext<XenonParser::EnumStatementContext>(0);
}

XenonParser::ImportStatementContext* XenonParser::StatementContext::importStatement() {
  return getRuleContext<XenonParser::ImportStatementContext>(0);
}

XenonParser::AssemblyStatementContext* XenonParser::StatementContext::assemblyStatement() {
  return getRuleContext<XenonParser::AssemblyStatementContext>(0);
}

XenonParser::AliasContext* XenonParser::StatementContext::alias() {
  return getRuleContext<XenonParser::AliasContext>(0);
}


size_t XenonParser::StatementContext::getRuleIndex() const {
  return XenonParser::RuleStatement;
}


antlrcpp::Any XenonParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XenonParserVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

XenonParser::StatementContext* XenonParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 4, XenonParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(198);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(169);
      function();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(170);
      namespaceStatement();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(171);
      expression(0);
      setState(172);
      match(XenonParser::InstructionsSeparator);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(174);
      body();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(175);
      variableDeclaration();
      setState(176);
      match(XenonParser::InstructionsSeparator);
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(178);
      returnStatement();
      setState(179);
      match(XenonParser::InstructionsSeparator);
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(181);
      ifStatement();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(182);
      whileStatement();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(183);
      forStatement();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(184);
      breakStatement();
      setState(185);
      match(XenonParser::InstructionsSeparator);
      break;
    }

    case 11: {
      enterOuterAlt(_localctx, 11);
      setState(187);
      specialClassStatement();
      break;
    }

    case 12: {
      enterOuterAlt(_localctx, 12);
      setState(188);
      classStatement();
      break;
    }

    case 13: {
      enterOuterAlt(_localctx, 13);
      setState(189);
      unionStatement();
      break;
    }

    case 14: {
      enterOuterAlt(_localctx, 14);
      setState(190);
      enumStatement();
      break;
    }

    case 15: {
      enterOuterAlt(_localctx, 15);
      setState(191);
      importStatement();
      break;
    }

    case 16: {
      enterOuterAlt(_localctx, 16);
      setState(192);
      assemblyStatement();
      setState(193);
      match(XenonParser::InstructionsSeparator);
      break;
    }

    case 17: {
      enterOuterAlt(_localctx, 17);
      setState(195);
      alias();
      setState(196);
      match(XenonParser::InstructionsSeparator);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

XenonParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t XenonParser::ExpressionContext::getRuleIndex() const {
  return XenonParser::RuleExpression;
}

void XenonParser::ExpressionContext::copyFrom(ExpressionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- SuffixUnaryNegationExpressionContext ------------------------------------------------------------------

XenonParser::ExpressionContext* XenonParser::SuffixUnaryNegationExpressionContext::expression() {
  return getRuleContext<XenonParser::ExpressionContext>(0);
}

tree::TerminalNode* XenonParser::SuffixUnaryNegationExpressionContext::Not() {
  return getToken(XenonParser::Not, 0);
}

XenonParser::SuffixUnaryNegationExpressionContext::SuffixUnaryNegationExpressionContext(ExpressionContext *ctx) { copyFrom(ctx); }


antlrcpp::Any XenonParser::SuffixUnaryNegationExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XenonParserVisitor*>(visitor))
    return parserVisitor->visitSuffixUnaryNegationExpression(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BinaryShiftOperationContext ------------------------------------------------------------------

std::vector<XenonParser::ExpressionContext *> XenonParser::BinaryShiftOperationContext::expression() {
  return getRuleContexts<XenonParser::ExpressionContext>();
}

XenonParser::ExpressionContext* XenonParser::BinaryShiftOperationContext::expression(size_t i) {
  return getRuleContext<XenonParser::ExpressionContext>(i);
}

XenonParser::ShiftOperatorContext* XenonParser::BinaryShiftOperationContext::shiftOperator() {
  return getRuleContext<XenonParser::ShiftOperatorContext>(0);
}

XenonParser::BinaryShiftOperationContext::BinaryShiftOperationContext(ExpressionContext *ctx) { copyFrom(ctx); }


antlrcpp::Any XenonParser::BinaryShiftOperationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XenonParserVisitor*>(visitor))
    return parserVisitor->visitBinaryShiftOperation(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DereferenceExpressionContext ------------------------------------------------------------------

tree::TerminalNode* XenonParser::DereferenceExpressionContext::Mul() {
  return getToken(XenonParser::Mul, 0);
}

XenonParser::ExpressionContext* XenonParser::DereferenceExpressionContext::expression() {
  return getRuleContext<XenonParser::ExpressionContext>(0);
}

XenonParser::DereferenceExpressionContext::DereferenceExpressionContext(ExpressionContext *ctx) { copyFrom(ctx); }


antlrcpp::Any XenonParser::DereferenceExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XenonParserVisitor*>(visitor))
    return parserVisitor->visitDereferenceExpression(this);
  else
    return visitor->visitChildren(this);
}
//----------------- InParenExpressionContext ------------------------------------------------------------------

tree::TerminalNode* XenonParser::InParenExpressionContext::OpeningParen() {
  return getToken(XenonParser::OpeningParen, 0);
}

XenonParser::ExpressionContext* XenonParser::InParenExpressionContext::expression() {
  return getRuleContext<XenonParser::ExpressionContext>(0);
}

tree::TerminalNode* XenonParser::InParenExpressionContext::ClosingParen() {
  return getToken(XenonParser::ClosingParen, 0);
}

XenonParser::InParenExpressionContext::InParenExpressionContext(ExpressionContext *ctx) { copyFrom(ctx); }


antlrcpp::Any XenonParser::InParenExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XenonParserVisitor*>(visitor))
    return parserVisitor->visitInParenExpression(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BinaryOperationContext ------------------------------------------------------------------

std::vector<XenonParser::ExpressionContext *> XenonParser::BinaryOperationContext::expression() {
  return getRuleContexts<XenonParser::ExpressionContext>();
}

XenonParser::ExpressionContext* XenonParser::BinaryOperationContext::expression(size_t i) {
  return getRuleContext<XenonParser::ExpressionContext>(i);
}

XenonParser::OperatorStatementContext* XenonParser::BinaryOperationContext::operatorStatement() {
  return getRuleContext<XenonParser::OperatorStatementContext>(0);
}

XenonParser::BinaryOperationContext::BinaryOperationContext(ExpressionContext *ctx) { copyFrom(ctx); }


antlrcpp::Any XenonParser::BinaryOperationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XenonParserVisitor*>(visitor))
    return parserVisitor->visitBinaryOperation(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BinaryBitwiseOperationContext ------------------------------------------------------------------

std::vector<XenonParser::ExpressionContext *> XenonParser::BinaryBitwiseOperationContext::expression() {
  return getRuleContexts<XenonParser::ExpressionContext>();
}

XenonParser::ExpressionContext* XenonParser::BinaryBitwiseOperationContext::expression(size_t i) {
  return getRuleContext<XenonParser::ExpressionContext>(i);
}

XenonParser::BitwiseOperatorStatementContext* XenonParser::BinaryBitwiseOperationContext::bitwiseOperatorStatement() {
  return getRuleContext<XenonParser::BitwiseOperatorStatementContext>(0);
}

XenonParser::BinaryBitwiseOperationContext::BinaryBitwiseOperationContext(ExpressionContext *ctx) { copyFrom(ctx); }


antlrcpp::Any XenonParser::BinaryBitwiseOperationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XenonParserVisitor*>(visitor))
    return parserVisitor->visitBinaryBitwiseOperation(this);
  else
    return visitor->visitChildren(this);
}
//----------------- UnaryPositiveExpressionContext ------------------------------------------------------------------

tree::TerminalNode* XenonParser::UnaryPositiveExpressionContext::Add() {
  return getToken(XenonParser::Add, 0);
}

XenonParser::ExpressionContext* XenonParser::UnaryPositiveExpressionContext::expression() {
  return getRuleContext<XenonParser::ExpressionContext>(0);
}

XenonParser::UnaryPositiveExpressionContext::UnaryPositiveExpressionContext(ExpressionContext *ctx) { copyFrom(ctx); }


antlrcpp::Any XenonParser::UnaryPositiveExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XenonParserVisitor*>(visitor))
    return parserVisitor->visitUnaryPositiveExpression(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NameExpressionContext ------------------------------------------------------------------

XenonParser::ScopedNameContext* XenonParser::NameExpressionContext::scopedName() {
  return getRuleContext<XenonParser::ScopedNameContext>(0);
}

XenonParser::NameExpressionContext::NameExpressionContext(ExpressionContext *ctx) { copyFrom(ctx); }


antlrcpp::Any XenonParser::NameExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XenonParserVisitor*>(visitor))
    return parserVisitor->visitNameExpression(this);
  else
    return visitor->visitChildren(this);
}
//----------------- EqualityOperationContext ------------------------------------------------------------------

std::vector<XenonParser::ExpressionContext *> XenonParser::EqualityOperationContext::expression() {
  return getRuleContexts<XenonParser::ExpressionContext>();
}

XenonParser::ExpressionContext* XenonParser::EqualityOperationContext::expression(size_t i) {
  return getRuleContext<XenonParser::ExpressionContext>(i);
}

XenonParser::EqualityOperatorStatementContext* XenonParser::EqualityOperationContext::equalityOperatorStatement() {
  return getRuleContext<XenonParser::EqualityOperatorStatementContext>(0);
}

XenonParser::EqualityOperationContext::EqualityOperationContext(ExpressionContext *ctx) { copyFrom(ctx); }


antlrcpp::Any XenonParser::EqualityOperationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XenonParserVisitor*>(visitor))
    return parserVisitor->visitEqualityOperation(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BitwiseNegationExpressionContext ------------------------------------------------------------------

tree::TerminalNode* XenonParser::BitwiseNegationExpressionContext::Neg() {
  return getToken(XenonParser::Neg, 0);
}

XenonParser::ExpressionContext* XenonParser::BitwiseNegationExpressionContext::expression() {
  return getRuleContext<XenonParser::ExpressionContext>(0);
}

XenonParser::BitwiseNegationExpressionContext::BitwiseNegationExpressionContext(ExpressionContext *ctx) { copyFrom(ctx); }


antlrcpp::Any XenonParser::BitwiseNegationExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XenonParserVisitor*>(visitor))
    return parserVisitor->visitBitwiseNegationExpression(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IndexContext ------------------------------------------------------------------

std::vector<XenonParser::ExpressionContext *> XenonParser::IndexContext::expression() {
  return getRuleContexts<XenonParser::ExpressionContext>();
}

XenonParser::ExpressionContext* XenonParser::IndexContext::expression(size_t i) {
  return getRuleContext<XenonParser::ExpressionContext>(i);
}

tree::TerminalNode* XenonParser::IndexContext::OpeningBracket() {
  return getToken(XenonParser::OpeningBracket, 0);
}

tree::TerminalNode* XenonParser::IndexContext::ClosingBracket() {
  return getToken(XenonParser::ClosingBracket, 0);
}

XenonParser::IndexContext::IndexContext(ExpressionContext *ctx) { copyFrom(ctx); }


antlrcpp::Any XenonParser::IndexContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XenonParserVisitor*>(visitor))
    return parserVisitor->visitIndex(this);
  else
    return visitor->visitChildren(this);
}
//----------------- LiteralDeclarationContext ------------------------------------------------------------------

XenonParser::LiteralContext* XenonParser::LiteralDeclarationContext::literal() {
  return getRuleContext<XenonParser::LiteralContext>(0);
}

XenonParser::LiteralDeclarationContext::LiteralDeclarationContext(ExpressionContext *ctx) { copyFrom(ctx); }


antlrcpp::Any XenonParser::LiteralDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XenonParserVisitor*>(visitor))
    return parserVisitor->visitLiteralDeclaration(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FunctionCallExpressionContext ------------------------------------------------------------------

XenonParser::ExpressionContext* XenonParser::FunctionCallExpressionContext::expression() {
  return getRuleContext<XenonParser::ExpressionContext>(0);
}

tree::TerminalNode* XenonParser::FunctionCallExpressionContext::OpeningParen() {
  return getToken(XenonParser::OpeningParen, 0);
}

tree::TerminalNode* XenonParser::FunctionCallExpressionContext::ClosingParen() {
  return getToken(XenonParser::ClosingParen, 0);
}

XenonParser::FunctionCallArgumentsContext* XenonParser::FunctionCallExpressionContext::functionCallArguments() {
  return getRuleContext<XenonParser::FunctionCallArgumentsContext>(0);
}

XenonParser::FunctionCallExpressionContext::FunctionCallExpressionContext(ExpressionContext *ctx) { copyFrom(ctx); }


antlrcpp::Any XenonParser::FunctionCallExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XenonParserVisitor*>(visitor))
    return parserVisitor->visitFunctionCallExpression(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PointerExpressionContext ------------------------------------------------------------------
